# tfm_forecasting

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.gpu  README.md  pretrain_classification.py  pretrain_regression.py  pretrain_regression_dynscm_live.py  prior_visualization.ipynb  pyproject.toml
configs/: forecast_bench_final_3model.json
notebooks/: 1.01_sanity_check_tests.ipynb  final_real_benchmark_standard_vs_nicl.ipynb
scripts/: audit_dynscm_learnability.py  audit_dynscm_prior.py  benchmark_dynscm_generation.py  check_forecast_final_ready.py  compare_dynscm_prior_to_forecast_benchmark.py  compare_live_dynscm_profile_to_forecast_benchmark.py  download_m4_tourism_local.py  eval_dynscm_synthetic_suite.py  eval_dynscm_target_stable_rank.py  final_real_benchmark_standard_vs_nicl.py  nicl_api_smoke.py  prepare_forecast_datasets.py  profile_dynscm_prior_diversity.py  run_benchmark_slice.sh  run_forecast_research.sh  run_repeated_batch_overfit_sanity.sh  run_vertex_curriculum.sh  run_vertex_dynscm_research.sh  run_vertex_dynscm_science_group.sh  submit_vertex_regression.sh  submit_vertex_regression_dynscm_live.sh  summarize_train_trace.py  sync_vertex_outputs.sh  update_docker_gpu.sh  validate_dynscm_generation_invariants.py
tests/: conftest.py  test_compare_live_dynscm_profile_to_forecast_benchmark.py  test_dynscm_benchmark_script.py  test_dynscm_features.py  test_dynscm_get_batch.py  test_dynscm_graph.py  test_dynscm_graph_sampling.py  test_dynscm_mechanisms.py  test_dynscm_missingness.py  test_dynscm_mixture_get_batch.py  test_dynscm_phase9_integration.py  test_dynscm_prior_analysis_scripts.py  test_dynscm_research_profiles.py  test_dynscm_simulate.py  test_dynscm_simulation.py  test_dynscm_stability.py  test_dynscm_variant_sampling.py  test_eval_dynscm_synthetic_suite.py  test_eval_dynscm_target_stable_rank.py  test_forecast_bench_adapters.py  test_forecast_bench_cli.py  test_forecast_bench_dataset_prepare.py  test_forecast_bench_datasets.py  test_forecast_bench_metrics.py  test_forecast_bench_protocol.py  test_forecast_bench_proxy.py  test_forecast_bench_report.py  test_forecast_bench_runner.py  test_forecast_final_preflight.py  test_gcs_utils.py  test_pretrain_regression_dynscm_live.py  test_pretrain_regression_paths.py  test_prior_audit_diversity.py  test_prior_dump_split.py  test_priors_cli_dynscm.py  test_priors_main_gcs.py  test_regression_prior_integrity.py  test_run_repeated_batch_overfit_sanity.py  test_run_vertex_curriculum_script.py  test_run_vertex_dynscm_research.py  (+6 more)
tfmplayground/: callbacks.py  evaluation.py  gcs_utils.py  interface.py  model.py  train.py  utils.py
tfmplayground/benchmarks/: __init__.py
(+31 files in other folders)
