[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tfmplayground"
version = "0.0.1"
description = "A Playground for Tabular Foundation Models"
readme = "README.md"
authors = ["Alexander Pfefferle <pfeffera@cs.uni-freiburg.de>"]
license = "MIT"
homepage = "https://github.com/automl/TFM-Playground"
repository = "https://github.com/automl/TFM-Playground"
packages = [
    { include = "tfmplayground" },
]

[tool.poetry.dependencies]
python = "==3.12.*"
torch = "==2.9"
numpy = ">=2.0.2"
h5py = ">=3"
requests = ">=2"
scikit-learn = ">=1.5"
schedulefree = ">=1.4"
pfns = "==0.3.0"
openml = "==0.15.1"
tabicl = "*"
interpret = "*"
numba = "*"
mlflow = "*"
ticl = { git = "https://github.com/microsoft/ticl.git", branch = "main" }
tabpfn-v1-prior = { git = "https://github.com/automl/tabpfn-v1-prior.git", branch = "main" }
wandb = { version = ">=0.20", optional = true }
tensorboard = { version = ">=2.19", optional = true }
pytest = "^9.0.2"
neuralk = "^0.1.1"

[tool.poetry.extras]
wandb = ["wandb"]
tensorboard = ["tensorboard"]

[tool.pytest.ini_options]
addopts = "-p no:dash"

[dependency-groups]
dev = [
    "mypy (>=1.19.1,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "ruff (>=0.15.2,<0.16.0)"
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
warn_unused_ignores = true